--- a/main/static/css/index.css
+++ b/main/static/css/index.css
@@ -50,7 +50,7 @@
     top: 50px;
     left: 0px;
     bottom: 0px;
-    /*background: lightsteelblue;*/
+    /*background: rebeccapurple;*/
     z-index: 0;
     overflow:hidden; word-break:break-all;
     display: flex;
