--- a/main/templates/labeling/review.html
+++ b/main/templates/labeling/review.html
@@ -40,6 +40,7 @@
                     <div class="code-area">
                         <el-table
                           :data="codeTable"
+                          height="90%"
                         >
                           <el-table-column
                             prop="sid"
@@ -63,26 +64,17 @@
                     </div>
                 </div>
                 <div class="right">
-                    <div class="ques-card">
+                    <div class="ques-card" v-for="ques in qList">
                         <div class="ques">
-                            Is the method total line larger than 30?
+                        <span>{%verbatim myblock%}{{ques.ques}}{%endverbatim myblock%}</span>
+                        <span class="detail">{%verbatim myblock%}{{ques.detail}}{%endverbatim myblock%}</span>
                         </div>
+<!--                        <div class="detail">{%verbatim myblock%}{{ques.detail}}{%endverbatim myblock%}</div>-->
                         <div class="btn-group">
-                            <el-radio-group class="el-radio__input" text-color="#0aaeb3" fill="#0aaeb3" v-model="radio3" size="small">
-                              <el-radio label="1" >Yes</el-radio>
-                              <el-radio label="2" >No</el-radio>
-                            </el-radio-group>
-                        </div>
-                    </div>
-
-                    <div class="ques-card">
-                        <div class="ques">
-                            Is the method have clear extract opportunity?
-                        </div>
-                        <div class="btn-group">
-                            <el-radio-group class="el-radio__input" text-color="#0aaeb3" fill="#0aaeb3" v-model="radio3" size="small">
-                              <el-radio label="1" >Yes</el-radio>
-                              <el-radio label="2" >No</el-radio>
+                            <el-radio-group class="el-radio__input" text-color="#0aaeb3" fill="#0aaeb3" v-model="ques.answer" size="small">
+                              <el-radio label="1" >1</el-radio>
+                              <el-radio label="2" >2</el-radio>
+                              <el-radio label="3" >3</el-radio>
                             </el-radio-group>
                         </div>
                     </div>
@@ -92,17 +84,15 @@
                             The start and end line of the extract method?
                         </div>
                         <div class="btn-group">
-                            <el-input v-model="message" type="number" placeholder="start line number"></el-input>
-                            <span>~</span>
-                            <el-input v-model="message" type="number" placeholder="end line number"></el-input>
+                            <el-input v-model="ex_pos" placeholder="eg.1-2,4-5"></el-input>
                         </div>
                     </div>
 
                     <div class="btns">
                         <el-button style="margin-left: 10px; width: 90px" size="small" @click="backMethod" round>back</el-button>
                         <el-button style="width: 90px; background-color: whitesmoke" size="small" @click="nextMethod" round>Next</el-button>
-                        <el-button style="width: 90px; background-color: ghostwhite" size="small" round>Negative</el-button>
-                        <el-button style="width: 90px; background-color: darkgrey" size="small" round>Positive</el-button>
+                        <el-button style="width: 90px; background-color: ghostwhite" size="small" @click="postNegative" round>Negative</el-button>
+                        <el-button style="width: 90px; background-color: darkgrey" size="small" @click="postPositive" round>Positive</el-button>
                     </div>
 
                 </div>
@@ -118,10 +108,11 @@
         el: '#app',
         data: {
             message: 'meg',
-            radio3:"1",
             projectId:"0",
             methodList:[],
             codeTable:[],
+            qList:[],
+            ex_pos:"",
             currentId:0
         },
         created(){
@@ -129,9 +120,10 @@
             var pid = pid[1]
             console.log(pid)
             this.getAllMethods(pid)
+            this.getQuestions()
             // hljs.highlightAll();
-            hljs.initHighlightingOnLoad();
-            hljs.initLineNumbersOnLoad();
+            // hljs.initHighlightingOnLoad();
+            // hljs.initLineNumbersOnLoad();
         },
 
         methods:{
@@ -148,7 +140,7 @@
                         // this.setCode(this.currentId)
                        // this.parseCode(this.currentId)
                        this.getCode(this.currentId)
-                       console.log(this.codeContent)
+                       console.log(this.methodList)
                    }
                 )
                 var i;
@@ -193,6 +185,9 @@
 
             },
             async getCode(id) {
+                if (this.methodList[id].fields.reviewed == true) {
+                    return;
+                }
                 var url = '/code_table';
                 var data = {
                     path: this.methodList[id].fields.path,
@@ -215,14 +210,95 @@
             backMethod(){
                 if (this.currentId > 0) {
                     this.currentId -= 1
-                    this.parseCode(this.currentId)
+                    this.getCode(this.currentId)
                 }
             },
-            postPositive(){
+            async calculateLevel() {
+                var score = 0;
+                var i = 0;
+                for (i = 0; i < this.qList.length; i++) {
+                    score += parseInt(this.qList[i].answer)
+                    var data = {
+                        ques_id: this.qList[i].qid,
+                        method_id: this.methodList[this.currentId].pk,
+                        answer: this.qList[i].answer
+                    }
+                    var url = '/post_ques';
+                    const response = await axios.post(url, data);
+                    console.log(response)
+                }
 
+                if (score <=3 ){
+                    return "1"
+                } else if (score > 3 && score <= 6) {
+                    return "2"
+                } else if (score > 6) {
+                    return "3"
+                } else {
+                    return "-1"
+                }
             },
-            postNegative(){
+            async postPositive(){
+                var url = '/post_pos';
+                var level = await this.calculateLevel()
+                var data = {
+                    method_id: this.methodList[this.currentId].pk,
+                    method_name:this.methodList[this.currentId].fields.method_name,
+                    class_name: this.methodList[this.currentId].fields.class_name,
+                    param_count: this.methodList[this.currentId].fields.param_count,
+                    return_type: this.methodList[this.currentId].fields.return_type,
+                    project_id: this.methodList[this.currentId].fields.project_id,
+                    path: this.methodList[this.currentId].fields.path,
+                    content: this.methodList[this.currentId].fields.content,
+                    level:level,
+                    ex_pos:this.ex_pos
+                }
 
+                const response = await axios.post(url, data);
+                if (response.status == 200) {
+                    this.methodList[this.currentId].fields.reviewed = true;
+                    this.nextMethod()
+                }
+                console.log(response)
+            },
+            async postNegative(){
+                var url = '/post_neg';
+                var data = {
+                    method_id: this.methodList[this.currentId].pk,
+                    method_name:this.methodList[this.currentId].fields.method_name,
+                    class_name: this.methodList[this.currentId].fields.class_name,
+                    param_count: this.methodList[this.currentId].fields.param_count,
+                    return_type: this.methodList[this.currentId].fields.return_type,
+                    project_id: this.methodList[this.currentId].fields.project_id,
+                    path: this.methodList[this.currentId].fields.path,
+                    content: this.methodList[this.currentId].fields.content,
+                }
+
+                const response = await axios.post(url, data);
+                if (response.status == 200) {
+                    this.methodList[this.currentId].fields.reviewed = true;
+                    this.nextMethod()
+                }
+                console.log(response)
+            },
+
+            async getQuestions() {
+              var url = '/ques_list';
+              const response = await axios.get(url);
+              if (response.status == 200) {
+                  console.log(response)
+                  var i =0
+                  for (i=0; i<response.data.length; i++) {
+                      var newQues = {
+                          ques:response.data[i].fields.ques,
+                          detail:response.data[i].fields.detail,
+                          answer:"1",
+                          qid:response.data[i].pk
+                      }
+                      this.qList.push(newQues)
+                  }
+              }
+              console.log(this.qList)
             },
 
             htmlEncode(str) {
