--- a/main/templates/labeling/review.html
+++ b/main/templates/labeling/review.html
@@ -19,7 +19,7 @@
     <!-- 引入组件库 -->
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.8.0/highlightjs-line-numbers.min.js"></script>
-
+    <script src="https://unpkg.com/clipboard@2/dist/clipboard.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
@@ -38,6 +38,7 @@
             <div class="body-content">
                 <div class="left">
                     <div class="code-area">
+                        <el-button class="btnc" @click="copyCode" size="mini" :data-clipboard-text="codeContent" round>Copy</el-button>
                         <el-table
                           :data="codeTable"
                           height="90%"
@@ -89,23 +90,23 @@
                     </div>
 
                     <div class="btns">
-                        <el-button style="margin-left: 10px; width: 90px" size="small" @click="backMethod" round>back</el-button>
+<!--                        <el-button style="margin-left: 10px; width: 90px" size="small" @click="backMethod" round>back</el-button>-->
                         <el-button style="width: 90px; background-color: whitesmoke" size="small" @click="nextMethod" round>Next</el-button>
                         <el-button style="width: 90px; background-color: ghostwhite" size="small" @click="postNegative" round>Negative</el-button>
                         <el-button style="width: 90px; background-color: darkgrey" size="small" @click="postPositive" round>Positive</el-button>
                     </div>
 
                 </div>
-                <div class="rright">
-                    <pre id="diyCodeBlock" style="height: 100%; width: 100%"><code></code></pre>
-                        <code style="height: 100%; width: 100%; overflow-x: scroll" class="java">
-                        {%verbatim myblock%}
-                            {{codeContent}}
-                        {%endverbatim myblock%}
-                        </code>
-                        <code id="codelang"></code>
-                    </pre>
-                </div>
+<!--                <div class="rright">-->
+<!--                    <pre id="diyCodeBlock" style="height: 100%; width: 100%"><code></code></pre>-->
+<!--                        <code style="height: 100%; width: 100%; overflow-x: scroll" class="java">-->
+<!--                        {%verbatim myblock%}-->
+<!--                            {{codeContent}}-->
+<!--                        {%endverbatim myblock%}-->
+<!--                        </code>-->
+<!--                        <code id="codelang"></code>-->
+<!--                    </pre>-->
+<!--                </div>-->
             </div>
 
         </div>
@@ -212,6 +213,22 @@
                 this.setCode(this.currentId)
             },
 
+            copyCode() {
+              let clipboard = new ClipboardJS('.btnc', {
+                  text: "ssds"
+                });
+              clipboard.on('success', function (e) {
+                  console.info('Action:', e.action);
+                  console.info('Text:', e.text);
+                  console.info('Trigger:', e.trigger);
+                  e.clearSelection();
+                });
+                clipboard.on('error', function (e) {
+                  console.error('Action:', e.action);
+                  console.error('Trigger:', e.trigger);
+                });
+
+            },
             nextMethod(){
                 this.currentId += 1
                 this.getCode(this.currentId)
